Implement more search critera for search endpoint